Lets make liliput the default. I think it will be in upcoming LTS any way.